Bug 472189. Delay attribute changes for progressmeter updates via script-runnables. r=enn,sr=roc